--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-Flask
-opencv-python
-Flask-SQLAlchemy
+Flask     # Framework utama untuk aplikasi web
+mysql-connector-python  # Untuk koneksi MySQL
+pymysql        # Library alternatif untuk MySQL dengan Python
